--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 endorsed.javafx.ant.classpath=.
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\IEXPLORE.EXE
-user.properties.file=C:\\Users\\Mirza\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\TEMP.SINERGIJA.000\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
